src/pages/tickets/detail/components/PhoneEvent/DownloadableDeletableRecording.less
@import '~@gorgias/design-tokens/dist/css/layout.less';

:local .recording-wrapper {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    gap: 5px;

    .button {
        padding: @layout-spacing-xs;
    }
}

:local .recording-controls {
    flex-grow: 1;
    flex-basis: calc(100%-90px); // Leave 90px for two buttons and their gaps.
    min-width: 48px; // Minimum amount to see the 'play' button.
}

